Enable micronaut-openapi module (#2626)
* Fix openapi

* Code cleanup

* Correct Jackson mapper settings

* Fixed test

* Spring boot 4 fixes

* Kotlin test fixes

* Correct env

* fix spotless

* remove AnnProcessorEnvironment

* Fixed by review

* Minor fixes

---------

Co-authored-by: Denis Stepanov <denis.s.stepanov@oracle.com>
Co-authored-by: issam liqali <liqaliissam@gmail.com>